fix visible

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -141,7 +141,8 @@
     flex-direction: column;
     align-items: flex-end;
 }
-.content__button_apply-promocode {
+.content__button_apply-promocode,
+.content__button_make-order {
     width: 178px;
     height: 45px;
     border-radius: 23px;
@@ -150,6 +151,15 @@
     background-color: #b7b7b7;
 }
 
+.content__invisible-promocode {
+    visibility: hidden;
+}
 .content__visible-promocode {
     color: #ff6c00;
+    visibility: visible;
+}
+
+.content__button_make-order {
+    background-color: #ff6c00;
+    color: #fff;
 }
